More flex box.flex-wrap/justify-content/align-itens

--- a/index-flex-01.html
+++ b/index-flex-01.html
@@ -12,9 +12,12 @@
        <ul>
          <li><a href="index.html">Início</a></li>
          <li><a href="index-flex-01.html">Flex - 1 - Row</a></li>
+         <li><a href="index-flex-02.html">Flex - 2 - Column</a></li>
+         <li><a href="index-flex-03.html">Flex - 3 - Row/Column-Reverse</a></li>
+         <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
        </ul>
      </nav>
-     <h2>Aula de Display - Flex - 1 - Row</h2>
+     <h2>Aula de Display - Flex</h2>
 
      <div class="container">
         <div class="box box-1">Lorem Ipsum - 1</div>
