--- a/index-flex-05.html
+++ b/index-flex-05.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="./css/style-base.css" type="text/css">
-      <link rel="stylesheet" href="./css/style-flex-02.css" type="text/css">
+      <link rel="stylesheet" href="./css/style-flex-05.css" type="text/css">
      <title>FLEX BOX</title>
    </head>
    <body>
@@ -15,6 +15,8 @@
          <li><a href="index-flex-02.html">Flex - 2 - Column</a></li>
          <li><a href="index-flex-03.html">Flex - 3 - Row/Column-Reverse</a></li>
          <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
+         <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
+         <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
