--- a/index-flex-06.html
+++ b/index-flex-06.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="./css/style-base.css" type="text/css">
-      <link rel="stylesheet" href="./css/style-flex-02.css" type="text/css">
+      <link rel="stylesheet" href="./css/style-flex-06.css" type="text/css">
      <title>FLEX BOX</title>
    </head>
    <body>
@@ -15,15 +15,17 @@
          <li><a href="index-flex-02.html">Flex - 2 - Column</a></li>
          <li><a href="index-flex-03.html">Flex - 3 - Row/Column-Reverse</a></li>
          <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
+         <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
+         <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
 
      <div class="container">
-        <div class="box box-1">Lorem Ipsum - 1</div>
-        <div class="box box-2">Lorem Ipsum - 2</div>
-        <div class="box box-3">Lorem Ipsum - 3</div>
-        <div class="box box-4">Lorem Ipsum - 4</div>
+        <div class="box box-1">Lorem Ipsum - Lorem Ipsum - 1</div>
+        <div class="box box-2">Lorem Ipsum - Lorem Ipsum - 2</div>
+        <div class="box box-3">Lorem Ipsum - Lorem Ipsum - 3</div>
+        <div class="box box-4">Lorem Ipsum - Lorem Ipsum - 4</div>
      </div>
 
    </body>
