--- a/index-flex-04.html
+++ b/index-flex-04.html
@@ -15,6 +15,7 @@
          <li><a href="index-flex-02.html">Flex - 2 - Column</a></li>
          <li><a href="index-flex-03.html">Flex - 3 - Row/Column-Reverse</a></li>
          <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
+         <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
