--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
          <li><a href="index-flex-01.html">Flex - 1 - Row</a></li>
          <li><a href="index-flex-02.html">Flex - 2 - Column</a></li>
          <li><a href="index-flex-03.html">Flex - 3 - Row/Column-Reverse</a></li>
+         <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
-     <div class="container">
-
-     </div>
    </body>
 </html>
