--- a/index-flex-07.html
+++ b/index-flex-07.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="./css/style-base.css" type="text/css">
-      <link rel="stylesheet" href="./css/style-flex-05.css" type="text/css">
+      <link rel="stylesheet" href="./css/style-flex-07.css" type="text/css">
      <title>FLEX BOX</title>
    </head>
    <body>
@@ -20,13 +20,13 @@
          <li><a href="index-flex-07.html">Flex - 7 - Flex-Grow</a></li>
        </ul>
      </nav>
-     <h2>Aula de Display - Flex</h2>
+     <h2>Aula de Display - Flex-Grow</h2>
 
      <div class="container">
-        <div class="box box-1">Lorem Ipsum - 1</div>
-        <div class="box box-2">Lorem Ipsum - 2</div>
-        <div class="box box-3">Lorem Ipsum - 3</div>
-        <div class="box box-4">Lorem Ipsum - 4</div>
+        <div class="box box-1">Lorem Ipsum - Lorem Ipsum - 1</div>
+        <div class="box box-2">Lorem Ipsum - Lorem Ipsum - 2</div>
+        <div class="box box-3">Lorem Ipsum - Lorem Ipsum - 3</div>
+        <div class="box box-4">Lorem Ipsum - Lorem Ipsum - 4</div>
      </div>
 
    </body>
