--- a/index-flex-04.html
+++ b/index-flex-04.html
@@ -16,6 +16,8 @@
          <li><a href="index-flex-03.html">Flex - 3 - Row/Column-Reverse</a></li>
          <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
          <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
+         <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
+         <li><a href="index-flex-07.html">Flex - 7 - Flex-Grow</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
