--- a/index-flex-06.html
+++ b/index-flex-06.html
@@ -17,13 +17,14 @@
          <li><a href="index-flex-04.html">Flex - 4 - Flex-Wrap</a></li>
          <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
          <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
+         <li><a href="index-flex-07.html">Flex - 7 - Flex-Grow</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
 
      <div class="container">
         <div class="box box-1">Lorem Ipsum - Lorem Ipsum - 1</div>
-        <div class="box box-2">Lorem Ipsum - Lorem Ipsum - 2</div>
+        <div class="box box-2">Lorem Ipsum - Lorem Ipsum - 2Lorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem IpsumLorem Ipsum - Lorem Ipsum</div>
         <div class="box box-3">Lorem Ipsum - Lorem Ipsum - 3</div>
         <div class="box box-4">Lorem Ipsum - Lorem Ipsum - 4</div>
      </div>
