--- a/index-flex-08.html
+++ b/index-flex-08.html
@@ -18,9 +18,10 @@
          <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
          <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
          <li><a href="index-flex-07.html">Flex - 7 - Flex-Grow</a></li>
+         <li><a href="index-flex-08.html">Flex - 8 - Flex-Basis</a></li>
        </ul>
      </nav>
-     <h2>Aula de Display - Flex-Grow</h2>
+     <h2>Aula de Display - Flex-Basis</h2>
 
      <div class="container">
         <div class="box box-1">Lorem Ipsum - Lorem Ipsum - 1</div>
