--- a/index-flex-05.html
+++ b/index-flex-05.html
@@ -9,7 +9,7 @@
    </head>
    <body>
      <nav>
-       <ul> 
+       <ul>
          <li><a href="index.html">Início</a></li>
          <li><a href="index-flex-01.html">Flex - 1 - Row</a></li>
          <li><a href="index-flex-02.html">Flex - 2 - Column</a></li>
@@ -18,6 +18,8 @@
          <li><a href="index-flex-05.html">Flex - 5 - Justify-Content</a></li>
          <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
          <li><a href="index-flex-07.html">Flex - 7 - Flex-Grow</a></li>
+         <li><a href="index-flex-08.html">Flex - 8 - Flex-Basis</a></li>
+         <li><a href="index-flex-09.html">Flex - 9 - Flex-Order</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex</h2>
