--- a/index-flex-08.html
+++ b/index-flex-08.html
@@ -19,6 +19,7 @@
          <li><a href="index-flex-06.html">Flex - 6 - Align-Itens</a></li>
          <li><a href="index-flex-07.html">Flex - 7 - Flex-Grow</a></li>
          <li><a href="index-flex-08.html">Flex - 8 - Flex-Basis</a></li>
+         <li><a href="index-flex-09.html">Flex - 9 - Flex-Order</a></li>
        </ul>
      </nav>
      <h2>Aula de Display - Flex-Basis</h2>
