--- a/index-flex-09.html
+++ b/index-flex-09.html
@@ -3,7 +3,8 @@
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-      <link rel="stylesheet" href="./css/style-base.css">
+      <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+      <link rel="stylesheet" href="./css/style-flex-09.css" type="text/css">
      <title>FLEX BOX</title>
    </head>
    <body>
@@ -21,6 +22,14 @@
          <li><a href="index-flex-09.html">Flex - 9 - Flex-Order</a></li>
        </ul>
      </nav>
-     <h2>Aula de Display - Flex</h2>
+     <h2>Aula de Display - Flex-Order</h2>
+
+     <div class="container">
+        <div class="box box-1">Lorem Ipsum - Lorem Ipsum - 1</div>
+        <div class="box box-2">Lorem Ipsum - Lorem Ipsum - 2</div>
+        <div class="box box-3">Lorem Ipsum - Lorem Ipsum - 3</div>
+        <div class="box box-4">Lorem Ipsum - Lorem Ipsum - 4</div>
+     </div>
+
    </body>
 </html>
